# bebop_autonomy_ros2

bebop_description/: CMakeLists.txt  package.xml
bebop_description/launch/: bebop.launch.py
bebop_driver/: CMakeLists.txt  component_plugins.xml  package.xml
bebop_driver/config/: bebop_params.yaml
bebop_driver/include/bebop_driver/: bebop.h  bebop_driver.h  bebop_driver_component.h
bebop_driver/include/bebop_driver/autogenerated/: ardrone3_setting_callback_includes.h  ardrone3_setting_callbacks.h  ardrone3_state_callback_includes.h  ardrone3_state_callbacks.h  common_state_callback_includes.h  common_state_callbacks.h
bebop_driver/launch/: bebop_node_launch.py
bebop_driver/scripts/meta/: BebopArdrone3.cfg  ardrone3_setting_callbacks.h  ardrone3_state_callbacks.h  ardrone3_states_param_topic.rst  callbacks_common.h  common_state_callbacks.h  common_states_param_topic.rst  generate.py  last_build_info  new.py
bebop_driver/scripts/meta/templates/: callbacks_common.h.mustache  cfg.mustache  setting_callbacks.h.mustache  state_callbacks.h.mustache
bebop_driver/src/: bebop.cpp  bebop_driver_component.cpp  bebop_driver_node.cpp  test_parrot.cpp
bebop_msgs/: CMakeLists.txt  package.xml
bebop_msgs/msg/: Ardrone3AccessoryStateConnectedAccessories.msg  Ardrone3AntiflickeringStateelectricFrequencyChanged.msg  Ardrone3AntiflickeringStatemodeChanged.msg  Ardrone3CameraStateOrientation.msg  Ardrone3CameraStateOrientationV2.msg  Ardrone3CameraStateVelocityRange.msg  Ardrone3CameraStatedefaultCameraOrientation.msg  Ardrone3CameraStatedefaultCameraOrientationV2.msg  Ardrone3GPSStateHomeTypeAvailabilityChanged.msg  Ardrone3GPSStateHomeTypeChosenChanged.msg  Ardrone3GPSStateNumberOfSatelliteChanged.msg  Ardrone3MediaRecordStatePictureStateChanged.msg  Ardrone3MediaRecordStatePictureStateChangedV2.msg  Ardrone3MediaRecordStateVideoResolutionState.msg  Ardrone3MediaRecordStateVideoStateChanged.msg  Ardrone3MediaRecordStateVideoStateChangedV2.msg  Ardrone3MediaStreamingStateVideoEnableChanged.msg  Ardrone3MediaStreamingStateVideoStreamModeChanged.msg  Ardrone3NetworkStateAllWifiAuthChannelChanged.msg  Ardrone3NetworkStateAllWifiScanChanged.msg  Ardrone3NetworkStateWifiAuthChannelListChanged.msg  Ardrone3NetworkStateWifiScanListChanged.msg  Ardrone3PROStateFeatures.msg  Ardrone3PilotingStateAirSpeedChanged.msg  Ardrone3PilotingStateAlertStateChanged.msg  Ardrone3PilotingStateAltitudeChanged.msg  Ardrone3PilotingStateAttitudeChanged.msg  Ardrone3PilotingStateAutoTakeOffModeChanged.msg  Ardrone3PilotingStateFlatTrimChanged.msg  Ardrone3PilotingStateFlyingStateChanged.msg  Ardrone3PilotingStateGpsLocationChanged.msg  Ardrone3PilotingStateLandingStateChanged.msg  Ardrone3PilotingStateNavigateHomeStateChanged.msg  Ardrone3PilotingStatePositionChanged.msg  (+45 more)
